--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
