--- a/.prettierrc
+++ b/.prettierrc
@@ -3,8 +3,8 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
+  "jsxSingleQuote": false,
   "printWidth": 120,
   "bracketSpacing": true,
   "endOfLine": "auto"
 }
-
